# qr_steam

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  README_ZH.md  analysis_options.yaml  pubspec.yaml
example/: .flutter-plugins-dependencies  .metadata  README.md  pubspec.yaml
example/.dart_tool/: package_config.json  package_graph.json
example/.dart_tool/extension_discovery/: vs_code.json
example/android/: build.gradle  gradle.properties  local.properties
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
example/android/app/src/main/kotlin/com/example/qr_steam_example/: MainActivity.kt
example/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  launch_background.xml
example/android/app/src/main/res/values/: styles.xml
example/lib/: main.dart
example/lib/pages/: home_page.dart  receiver_page.dart  sender_page.dart
example/lib/services/: image_service.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/flutter/ephemeral/.plugin_symlinks/: flutter_avif_windows  jni  path_provider_windows  permission_handler_windows  screen_capturer_windows
example/windows/runner/: Runner.rc  main.cpp
lib/: qr_steam.dart
lib/src/fountain/: fountain_decoder.dart  fountain_encoder.dart  fountain_packet.dart  soliton.dart
lib/src/sequential/: sequential_decoder.dart  sequential_encoder.dart  sequential_packet.dart
lib/src/transfer/: qr_transfer_mode.dart
lib/src/widgets/: qr_stream_receiver.dart  qr_stream_sender.dart
test/: fountain_test.dart  sequential_test.dart
